0023392: Memory leak in OCAF in debug mode

TDF_LabelNode::Destroy() does not free memory for entry strings TCollection_AsciiString myDebugEntry problem was corrected.